--- a/FlappyBird/Flappy.html
+++ b/FlappyBird/Flappy.html
@@ -23,6 +23,10 @@
 				this.canvas.height = 270;
 				this.context = this.canvas.getContext("2d");
 				document.body.insertBefore(this.canvas, document.body.childNodes[0]);
+				this.interval = setInterval(updateGameArea, 20);
+			},
+			clear : function() {
+				this.context.clearRect(0, 0, this.canvas.width, this.canvas.height);
 			}
 		}
 
@@ -34,6 +38,11 @@
 			ctx = myGameArea.context;
 			ctx.fillStyle = color;
 			ctx.fillRect(this.x, this.y, this.width, this.height);
+		}
+
+		function updateGameArea() {
+			myGameArea.clear();
+			myGamePiece.update();
 		}
 	</script>
 
