--- a/FlappyBird/Flappy.html
+++ b/FlappyBird/Flappy.html
@@ -33,6 +33,8 @@
 		function component(width, height, color, x, y) {
 			this.width = width;
 			this.height = height;
+			this.speedX = 0;
+			this.speedY = 0;
 			this.x = x;
 			this.y = y;
 			this.update = function() {
@@ -40,15 +42,42 @@
 				ctx.fillStyle = color;
 				ctx.fillRect(this.x, this.y, this.width, this.height);
 			}
+			this.newPos = function() {
+				this.x += this.speedX;
+				this.y += this.speedY;
+			}
 		}
 
 		function updateGameArea() {
 			myGameArea.clear();
-			myGamePiece.x += 1;
+			myGamePiece.newPos();
 			myGamePiece.update();
+		}
+
+		function moveUp() {
+			myGamePiece.speedY -= 1;
+		}
+
+		function moveDown() {
+			myGamePiece.speedY += 1;
+		}
+
+		function moveLeft() {
+			myGamePiece.speedX -= 1;
+		}
+
+		function moveRight() {
+			myGamePiece.speedX += 1;
 		}
 	</script>
 
 	<p>We have created a game area! (or at least an empty canvas)</p>
+	<div style="text-align: center; width: 480px;">
+		<button onclick="moveUp()">UP</button>
+		<button onclick="moveDown()">DOWN</button>
+		<button onclick="moveLeft()">LEFT</button>
+		<button onclick="moveRight()">RIGHT</button>
+	</div>
+	<p>If you click a button the red square will start moving. Click the same button many times, and it will move faster and faster.</p>
 </body>
 </html>
