--- a/FlappyBird/Flappy.html
+++ b/FlappyBird/Flappy.html
@@ -23,7 +23,7 @@
 				this.canvas.height = 270;
 				this.context = this.canvas.getContext("2d");
 				document.body.insertBefore(this.canvas, document.body.childNodes[0]);
-				this.interval = setInterval(updateGameArea, 20);
+				this.interval = setInterval(updateGameArea, 20);//set update every 20ms;
 			},
 			clear : function() {
 				this.context.clearRect(0, 0, this.canvas.width, this.canvas.height);
@@ -50,8 +50,8 @@
 
 		function updateGameArea() {
 			myGameArea.clear();
-			myGamePiece.newPos();
-			myGamePiece.update();
+			myGamePiece.newPos();//set new Position allow speed
+			myGamePiece.update();//
 		}
 
 		function moveUp() {
