--- a/FlappyBird/Flappy.html
+++ b/FlappyBird/Flappy.html
@@ -92,6 +92,7 @@
 					myGamePiece.speedX = 0;
 					myGamePiece.speedY = 0;
 				}
+				myObstacle.x += -1;
 				myGamePiece.newPos();//set new Position allow speed
 				myGamePiece.update();
 				myObstacle.update();
