--- a/FlappyBird/Flappy.html
+++ b/FlappyBird/Flappy.html
@@ -19,6 +19,7 @@
 				this.context = this.canvas.getContext("2d");
 				document.body.insertBefore(this.canvas, document.body.childNodes[0]);
 				this.interval = setInterval(updateGameArea, 20);//set update every 20ms;
+				this.frameNo = 0;//count frame
 				window.addEventListener('keydown', function(e){
 					myGameArea.key = e.keyCode;
 				});
@@ -36,13 +37,18 @@
 
 		var myGamePiece;
 		var myObstacle;
+		var myObstacles = [];
 
 		function startGame(){
 			myGameArea.start();
 			myGamePiece = new component(30, 30, "red", 10, 120);
-			myObstacle = new component(10, 200, "green", 300, 120);
+			//myObstacle = new component(10, 200, "green", 300, 120);
 		}
 
+		function everyInterval(n) {
+			if ((myGameArea.frameNo / n) % 1 == 0) { return true;}
+			return false;
+		}
 
 		function component(width, height, color, x, y) {
 			this.width = width;
@@ -78,25 +84,38 @@
 		}
 
 		function updateGameArea() {
-			myGameArea.clear();
-			
-			if (myGamePiece.crashWith(myObstacle)) {
-				myGameArea.stop();
-			}
-			else {
-				if (myGameArea.key && myGameArea.key == 37) {myGamePiece.speedX = -1;}
-				else if (myGameArea.key && myGameArea.key == 39) {myGamePiece.speedX = 1;}
-				else if (myGameArea.key && myGameArea.key == 38) {myGamePiece.speedY = -1;}
-				else if (myGameArea.key && myGameArea.key == 40) {myGamePiece.speedY = 1;}
-				else {
-					myGamePiece.speedX = 0;
-					myGamePiece.speedY = 0;
+			var x,y;
+			for (var i = 0; i < myObstacles.length; i++) {
+				if (myGamePiece.crashWith(myObstacles[i])) {
+					myGameArea.stop();
+					return;
 				}
-				myObstacle.x += -1;
-				myGamePiece.newPos();//set new Position allow speed
-				myGamePiece.update();
-				myObstacle.update();
-			}			
+			}
+			myGameArea.clear();
+			myGameArea.frameNo += 1;
+			if (myGameArea.frameNo == 1 || everyInterval(150)) {
+				x = myGameArea.canvas.width;
+				y = myGameArea.canvas.height - 200;
+				myObstacles.push(new component(10, 200, "green", x, y))
+			}
+			for (var i = 0; i < myObstacles.length; i++) {
+					myObstacles[i].x += -1;
+					myObstacles[i].update();
+			}	
+
+			
+			if (myGameArea.key && myGameArea.key == 37) {myGamePiece.speedX = -1;}
+			else if (myGameArea.key && myGameArea.key == 39) {myGamePiece.speedX = 1;}
+			else if (myGameArea.key && myGameArea.key == 38) {myGamePiece.speedY = -1;}
+			else if (myGameArea.key && myGameArea.key == 40) {myGamePiece.speedY = 1;}
+			else {
+				myGamePiece.speedX = 0;
+				myGamePiece.speedY = 0;
+			}
+
+			myGamePiece.newPos();//set new Position allow speed
+			myGamePiece.update();
+					
 		}
 
 		function moveUp() {
