--- a/FlappyBird/Flappy.html
+++ b/FlappyBird/Flappy.html
@@ -95,8 +95,16 @@
 			myGameArea.frameNo += 1;
 			if (myGameArea.frameNo == 1 || everyInterval(150)) {
 				x = myGameArea.canvas.width;
-				y = myGameArea.canvas.height - 200;
-				myObstacles.push(new component(10, 200, "green", x, y))
+				y = myGameArea.canvas.height;
+				minHeight = 20;
+				maxHeight = 200;
+				height = Math.floor(Math.random()*(maxHeight - minHeight + 1) + minHeight);
+				maxGap = 200;
+				minGap = 50;
+				gap = Math.floor(Math.random()*(maxGap - minGap +1 ) + minGap);
+				myObstacles.push(new component(10, height, "green", x, 0));
+				myObstacles.push(new component(10, y - height - gap, "green", x, height + gap));
+				//myObstacles.push(new component(20, 200, "green", x, 50));
 			}
 			for (var i = 0; i < myObstacles.length; i++) {
 					myObstacles[i].x += -1;
@@ -104,10 +112,10 @@
 			}	
 
 			
-			if (myGameArea.key && myGameArea.key == 37) {myGamePiece.speedX = -1;}
-			else if (myGameArea.key && myGameArea.key == 39) {myGamePiece.speedX = 1;}
-			else if (myGameArea.key && myGameArea.key == 38) {myGamePiece.speedY = -1;}
-			else if (myGameArea.key && myGameArea.key == 40) {myGamePiece.speedY = 1;}
+			if (myGameArea.key && myGameArea.key == 37) {myGamePiece.speedX = -5;}
+			else if (myGameArea.key && myGameArea.key == 39) {myGamePiece.speedX = 5;}
+			else if (myGameArea.key && myGameArea.key == 38) {myGamePiece.speedY = -5;}
+			else if (myGameArea.key && myGameArea.key == 40) {myGamePiece.speedY = 5;}
 			else {
 				myGamePiece.speedX = 0;
 				myGamePiece.speedY = 0;
