--- a/FlappyBird/Flappy.html
+++ b/FlappyBird/Flappy.html
@@ -38,11 +38,14 @@
 		var myGamePiece;
 		var myObstacle;
 		var myObstacles = [];
+		var myScore;
 
 		function startGame(){
-			myGameArea.start();
+
 			myGamePiece = new component(30, 30, "red", 10, 120);
 			//myObstacle = new component(10, 200, "green", 300, 120);
+			myScore = new component("30px", "Consolas", "black", 280, 40, "text");
+			myGameArea.start();
 		}
 
 		function everyInterval(n) {
@@ -50,7 +53,8 @@
 			return false;
 		}
 
-		function component(width, height, color, x, y) {
+		function component(width, height, color, x, y, type) {
+			this.type = type;
 			this.width = width;
 			this.height = height;
 			this.speedX = 0;
@@ -59,8 +63,15 @@
 			this.y = y;
 			this.update = function() {
 				ctx = myGameArea.context;
-				ctx.fillStyle = color;
-				ctx.fillRect(this.x, this.y, this.width, this.height);
+				if (this.type == "text") {
+					ctx.font = this.width + " " + this.height;
+					ctx.fillStyle = color;
+					ctx.fillText(this.text, this.x, this.y);
+				}
+				else {
+					ctx.fillStyle = color;
+					ctx.fillRect(this.x, this.y, this.width, this.height);
+				}
 			}
 			this.newPos = function() {
 				this.x += this.speedX;
@@ -123,6 +134,8 @@
 
 			myGamePiece.newPos();//set new Position allow speed
 			myGamePiece.update();
+			myScore.text = "SCORE: "+ myGameArea.frameNo;
+			myScore.update();
 					
 		}
 
