--- a/FlappyBird/FlightShooter.html
+++ b/FlappyBird/FlightShooter.html
@@ -12,9 +12,10 @@
 <body onload="startGame()">
 	<script>
 		const FLIGHT_WIDTH = 30;
-		const FLIGHT_HEIGHT = 30;
+		const FLIGHT_HEIGHT = 40;
 		const VIEWPORT_WIDTH = 480;
 		const VIEWPORT_HEIGHT = 640;
+		const SPEED = 3;
 
 		var myGameArea = {
 			canvas : document.createElement("canvas"),
@@ -23,6 +24,16 @@
 				this.canvas.height = VIEWPORT_HEIGHT;
 				this.context = this.canvas.getContext("2d");
 				document.body.insertBefore(this.canvas, document.body.childNodes[0]);
+				this.interval = setInterval(gameAreaUpdate, 20);
+				window.addEventListener('keydown', function(e){
+					myGameArea.key = e.keyCode;
+				});
+				window.addEventListener('keyup', function(e){
+					myGameArea.key = false;
+				});
+			},
+			clear : function() {
+				this.context.clearRect(0, 0, this.canvas.width, this.canvas.height);
 			}
 		}
 		var flight;
@@ -33,10 +44,17 @@
 			this.height = height;
 			this.x = x;
 			this.y = y;
-			ctx = myGameArea.context;
-			ctx.fillStyle = color;
-			ctx.fillRect(this.x, this.y, this.width, this.height);
-
+			this.speedX = 0;
+			this.speedY = 0;
+			this.update = function(){
+				ctx = myGameArea.context;
+				ctx.fillStyle = color;
+				ctx.fillRect(this.x, this.y, this.width, this.height);
+			}
+			this.newPos = function(){
+				this.x += this.speedX;
+				this.y += this.speedY;
+			}
 		}
 
 		function calCenter(widthViewport, widthCharactor)
@@ -50,6 +68,29 @@
 			flightX = calCenter(VIEWPORT_WIDTH, FLIGHT_WIDTH);
 			flightY = VIEWPORT_HEIGHT - 100;
 			flight = new component(FLIGHT_WIDTH, FLIGHT_HEIGHT, "red", flightX, flightY);
+		}
+
+		function gameAreaUpdate()
+		{
+			myGameArea.clear();
+			if (myGameArea.key && myGameArea.key == 37) { //left
+				flight.speedX = -SPEED;
+			}
+			else if (myGameArea.key && myGameArea.key == 39) {//right
+				flight.speedX = SPEED;
+			}
+			else if (myGameArea.key && myGameArea.key == 38) {//up
+				flight.speedY = -SPEED;
+			}
+			else if (myGameArea.key && myGameArea.key == 40) {//down
+				flight.speedY = SPEED;
+			}
+			else {
+				flight.speedX = 0;
+				flight.speedY = 0;
+			}
+			flight.newPos();
+			flight.update();
 		}
 
 	</script>
